2002-11-13  Darin Adler  <darin@apple.com>

        - fixed 3073230 -- JavaScript time calls do I/O by lstat()ing /etc/localtime

        * kjs/date_object.cpp:
        (formatDate): Added.
        (formatTime): Added.
        (formatLocaleDate): Added.
        (formatLocaleTime): Added.
        (DateProtoFuncImp::call): Changed to use the above functions instead of
	using strftime.

2002-11-08  Darin Adler  <darin@apple.com>

        * kjs/date_object.cpp:
        (ctimeUsingCF): Added.
        (timeUsingCF): Added.

2002-11-07  Darin Adler  <darin@apple.com>

        * kjs/date_object.cpp: (mktimeUsingCF): Fix storage leak.

2002-11-07  Maciej Stachowiak  <mjs@apple.com>

	- partial fix to 3073230 - JavaScript time calls do I/O by
	lastat()ing /etc/localtime
	
        * kjs/date_object.cpp:
        (mktimeUsingCF): Implementation of mktime using CF.

=== Alexander-31 ===

2002-11-01  Darin Adler  <darin@apple.com>

        * kjs/object.cpp: Make the same change Maciej just did, but to the
	other constructor right next to the one he changed.

2002-10-31  Maciej Stachowiak  <mjs@apple.com>

	- fixed 3082660 - REGRESSION: one ListImp leaks opening/closing nearly empty web page
	
        * kjs/object.cpp: Set gc allowed on freshly created ListImp, since
	there is no List wrapper for it.

2002-10-31  Darin Adler  <darin@apple.com>

        * kjs/grammar.y: Fix the APPLE_CHANGES thing here too.
        * kjs/grammar.cpp: Regenerated this file.

=== Alexander-30 ===

2002-10-30  Darin Adler  <darin@apple.com>

	- fixed 3073230 -- Alex is doing file I/O when executing JavaScript by asking for localtime

	I fixed this by using Core Foundation time functions instead.

        * kjs/date_object.cpp:
        (tmUsingCF): Function that uses Core Foundation to get the time and then puts it into
	a tm struct.
        (gmtimeUsingCF): Function used instead of gmtime (used a macro to make the substitution).